kubernetes/infrastructure/configs/network/traefik/traefik.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-world
  namespace: traefik-system
spec:
  description: "Allow traffic from the world to the Traefik ingress"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  enableDefaultDeny:
    ingress: false
  ingress:
    - fromEntities:
        - world
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-proxy
  namespace: traefik-system
spec:
  forwardAuth:
    address: http://ak-outpost-proxy.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - X-authentik-meta-version
